fix bottom gap

--- a/src/router/Routes.css
+++ b/src/router/Routes.css
@@ -12,6 +12,7 @@
 
 .black-transition {
 	position: fixed;
+	top: 0;
 	z-index: 450;
 	width: 100vw;
 	min-height: 100vh;
